--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-react-app": "^9.0.1",
     "css-loader": "^3.2.0",
+    "gh-pages": "^2.1.1",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-react-app": "^9.0.1",
-    "gh-pages": "^2.1.1",
-    "play-what-beta": "^1.0.2",
+    "play-what-beta": "^1.0.3",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "ts-loader": "^6.0.4"
+    "react-dom": "^16.9.0"
   },
   "babel": {
     "presets": [
